Fixed memory access out of bounds

--- a/src/frontend/ui.css
+++ b/src/frontend/ui.css
@@ -8,6 +8,10 @@
   background-color: rgb(128, 214, 128);
 }
 
+body{
+  background-color: rgb(128, 214, 128);
+}
+
 .board {
   display: flex;
   flex-direction: column;
